# linear_algebra_lib

./: CMakeLists.txt  complex.cpp  complex.h  complex.txt  console.cpp  console.h  io.txt  linear.cpp  matrix.cpp  matrix.h  var.h  vector.cpp  vector.h  vector.txt
